fix overflow

--- a/src/components/display/Glass.scss
+++ b/src/components/display/Glass.scss
@@ -1,5 +1,4 @@
 #glass-container {
-  height: 5vh;
   padding: 10rem 2.5rem;
   display: flex;
   justify-content: center;
